# proc-macro-workshop

builder/: Cargo.toml
sorted/: Cargo.toml
sorted/src/: lib.rs
sorted/tests/: .rustc_info.json  01-parse-enum.rs
sorted/tests/debug/.fingerprint/autocfg-5788d3b0c0ad14fb/: lib-autocfg  lib-autocfg.json
sorted/tests/debug/.fingerprint/num-bigint-05e9df339db1ae58/: run-build-script-build-script-build  run-build-script-build-script-build.json
sorted/tests/debug/.fingerprint/num-bigint-663a564f234bfd4c/: lib-num-bigint  lib-num-bigint.json
sorted/tests/debug/.fingerprint/num-bigint-aaa7adef96904ac7/: build-script-build-script-build  build-script-build-script-build.json
sorted/tests/debug/.fingerprint/num-integer-6785980c957e4b59/: run-build-script-build-script-build  run-build-script-build-script-build.json
sorted/tests/debug/.fingerprint/num-integer-a10e617db7097973/: lib-num-integer  lib-num-integer.json
sorted/tests/debug/.fingerprint/num-integer-a7f3848711a5174d/: build-script-build-script-build  build-script-build-script-build.json
sorted/tests/debug/.fingerprint/num-traits-938ecca558738590/: run-build-script-build-script-build  run-build-script-build-script-build.json
sorted/tests/debug/.fingerprint/num-traits-93c14c7be9f7f447/: build-script-build-script-build  build-script-build-script-build.json
sorted/tests/debug/.fingerprint/num-traits-eaedcaba01aaed04/: lib-num-traits  lib-num-traits.json
sorted/tests/debug/.fingerprint/proc-macro2-0e5f8d62dab48e63/: build-script-build-script-build  build-script-build-script-build.json
(+21 files in other folders)
