[package]
name = "sorted"
version = "0.0.0"
autotests = false
edition = "2021"
publish = false

[lib]
proc-macro = true

[[test]]
name = "tests"
path = "tests/progress.rs"

[[bin]]
name = "expand1"
path = "tests/01-parse-enum.rs"

[dev-dependencies]
trybuild = { version = "1.0.49", features = ["diff"] }

[dependencies]
# TODO
syn = { version = "1.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"
num-bigint = "0.4.3"
#sorted = { path = "./sorted"}